Fix #614, make the share link a link instead of an <input> field. Add .towtruck-only-mobile and .towtruck-not-mobile as a general flag. Copy over the profile/settings menu to a windowed version for mobile. Change edit to a separate window on mobile, fixes #620. Keep the dock closer to the bottom of the screen, fixes #611. Make windows the right width, but not quite right (part of #613). Keep chat input from focusing on mobile, fixes #615.

--- a/towtruck/towtruck.less
+++ b/towtruck/towtruck.less
@@ -1585,10 +1585,16 @@ section.towtruck-buttons.towtruck-buttons-notification-diff-url {
   }
 }
 
+.towtruck-only-mobile {
+  display: none;
+}
+
 @media screen and (max-device-width: 480px) {
   @import "mobile.less";
 }
 
+/* We set this class on the <body> element when that last media query won't work
+   but we detect in Javascript that the client should be treated as mobile */
 .towtruck-mobile-browser {
   @import "mobile.less";
 }
